Specify grid areas to fix layout issue

--- a/src/style.css
+++ b/src/style.css
@@ -65,3 +65,623 @@
 .available:hover {
 	background-color: lightseagreen;
 }
+
+#b00 {
+	grid-area: b00;
+}
+#b01 {
+	grid-area: b01;
+}
+#b02 {
+	grid-area: b02;
+}
+#b03 {
+	grid-area: b03;
+}
+#b04 {
+	grid-area: b04;
+}
+#b05 {
+	grid-area: b05;
+}
+#b06 {
+	grid-area: b06;
+}
+#b07 {
+	grid-area: b07;
+}
+#b08 {
+	grid-area: b08;
+}
+#b09 {
+	grid-area: b09;
+}
+
+#b10 {
+	grid-area: b10;
+}
+#b11 {
+	grid-area: b11;
+}
+#b12 {
+	grid-area: b12;
+}
+#b13 {
+	grid-area: b13;
+}
+#b14 {
+	grid-area: b14;
+}
+#b15 {
+	grid-area: b15;
+}
+#b16 {
+	grid-area: b16;
+}
+#b17 {
+	grid-area: b17;
+}
+#b18 {
+	grid-area: b18;
+}
+#b19 {
+	grid-area: b19;
+}
+
+#b20 {
+	grid-area: b20;
+}
+#b21 {
+	grid-area: b21;
+}
+#b22 {
+	grid-area: b22;
+}
+#b23 {
+	grid-area: b23;
+}
+#b24 {
+	grid-area: b24;
+}
+#b25 {
+	grid-area: b25;
+}
+#b26 {
+	grid-area: b26;
+}
+#b27 {
+	grid-area: b27;
+}
+#b28 {
+	grid-area: b28;
+}
+#b29 {
+	grid-area: b29;
+}
+
+#b30 {
+	grid-area: b30;
+}
+#b31 {
+	grid-area: b31;
+}
+#b32 {
+	grid-area: b32;
+}
+#b33 {
+	grid-area: b33;
+}
+#b34 {
+	grid-area: b34;
+}
+#b35 {
+	grid-area: b35;
+}
+#b36 {
+	grid-area: b36;
+}
+#b37 {
+	grid-area: b37;
+}
+#b38 {
+	grid-area: b38;
+}
+#b39 {
+	grid-area: b39;
+}
+
+#b40 {
+	grid-area: b40;
+}
+#b41 {
+	grid-area: b41;
+}
+#b42 {
+	grid-area: b42;
+}
+#b43 {
+	grid-area: b43;
+}
+#b44 {
+	grid-area: b44;
+}
+#b45 {
+	grid-area: b45;
+}
+#b46 {
+	grid-area: b46;
+}
+#b47 {
+	grid-area: b47;
+}
+#b48 {
+	grid-area: b48;
+}
+#b49 {
+	grid-area: b49;
+}
+
+#b50 {
+	grid-area: b50;
+}
+#b51 {
+	grid-area: b51;
+}
+#b52 {
+	grid-area: b52;
+}
+#b53 {
+	grid-area: b53;
+}
+#b54 {
+	grid-area: b54;
+}
+#b55 {
+	grid-area: b55;
+}
+#b56 {
+	grid-area: b56;
+}
+#b57 {
+	grid-area: b57;
+}
+#b58 {
+	grid-area: b58;
+}
+#b59 {
+	grid-area: b59;
+}
+
+#b60 {
+	grid-area: b60;
+}
+#b61 {
+	grid-area: b61;
+}
+#b62 {
+	grid-area: b62;
+}
+#b63 {
+	grid-area: b63;
+}
+#b64 {
+	grid-area: b64;
+}
+#b65 {
+	grid-area: b65;
+}
+#b66 {
+	grid-area: b66;
+}
+#b67 {
+	grid-area: b67;
+}
+#b68 {
+	grid-area: b68;
+}
+#b69 {
+	grid-area: b69;
+}
+
+#b70 {
+	grid-area: b70;
+}
+#b71 {
+	grid-area: b71;
+}
+#b72 {
+	grid-area: b72;
+}
+#b73 {
+	grid-area: b73;
+}
+#b74 {
+	grid-area: b74;
+}
+#b75 {
+	grid-area: b75;
+}
+#b76 {
+	grid-area: b76;
+}
+#b77 {
+	grid-area: b77;
+}
+#b78 {
+	grid-area: b78;
+}
+#b79 {
+	grid-area: b79;
+}
+
+#b80 {
+	grid-area: b80;
+}
+#b81 {
+	grid-area: b81;
+}
+#b82 {
+	grid-area: b82;
+}
+#b83 {
+	grid-area: b83;
+}
+#b84 {
+	grid-area: b84;
+}
+#b85 {
+	grid-area: b85;
+}
+#b86 {
+	grid-area: b86;
+}
+#b87 {
+	grid-area: b87;
+}
+#b88 {
+	grid-area: b88;
+}
+#b89 {
+	grid-area: b89;
+}
+
+#b90 {
+	grid-area: b90;
+}
+#b91 {
+	grid-area: b91;
+}
+#b92 {
+	grid-area: b92;
+}
+#b93 {
+	grid-area: b93;
+}
+#b94 {
+	grid-area: b94;
+}
+#b95 {
+	grid-area: b95;
+}
+#b96 {
+	grid-area: b96;
+}
+#b97 {
+	grid-area: b97;
+}
+#b98 {
+	grid-area: b98;
+}
+#b99 {
+	grid-area: b99;
+}
+
+#s00 {
+	grid-area: s00;
+}
+#s01 {
+	grid-area: s01;
+}
+#s02 {
+	grid-area: s02;
+}
+#s03 {
+	grid-area: s03;
+}
+#s04 {
+	grid-area: s04;
+}
+#s05 {
+	grid-area: s05;
+}
+#s06 {
+	grid-area: s06;
+}
+#s07 {
+	grid-area: s07;
+}
+#s08 {
+	grid-area: s08;
+}
+#s09 {
+	grid-area: s09;
+}
+
+#s10 {
+	grid-area: s10;
+}
+#s11 {
+	grid-area: s11;
+}
+#s12 {
+	grid-area: s12;
+}
+#s13 {
+	grid-area: s13;
+}
+#s14 {
+	grid-area: s14;
+}
+#s15 {
+	grid-area: s15;
+}
+#s16 {
+	grid-area: s16;
+}
+#s17 {
+	grid-area: s17;
+}
+#s18 {
+	grid-area: s18;
+}
+#s19 {
+	grid-area: s19;
+}
+
+#s20 {
+	grid-area: s20;
+}
+#s21 {
+	grid-area: s21;
+}
+#s22 {
+	grid-area: s22;
+}
+#s23 {
+	grid-area: s23;
+}
+#s24 {
+	grid-area: s24;
+}
+#s25 {
+	grid-area: s25;
+}
+#s26 {
+	grid-area: s26;
+}
+#s27 {
+	grid-area: s27;
+}
+#s28 {
+	grid-area: s28;
+}
+#s29 {
+	grid-area: s29;
+}
+
+#s30 {
+	grid-area: s30;
+}
+#s31 {
+	grid-area: s31;
+}
+#s32 {
+	grid-area: s32;
+}
+#s33 {
+	grid-area: s33;
+}
+#s34 {
+	grid-area: s34;
+}
+#s35 {
+	grid-area: s35;
+}
+#s36 {
+	grid-area: s36;
+}
+#s37 {
+	grid-area: s37;
+}
+#s38 {
+	grid-area: s38;
+}
+#s39 {
+	grid-area: s39;
+}
+
+#s40 {
+	grid-area: s40;
+}
+#s41 {
+	grid-area: s41;
+}
+#s42 {
+	grid-area: s42;
+}
+#s43 {
+	grid-area: s43;
+}
+#s44 {
+	grid-area: s44;
+}
+#s45 {
+	grid-area: s45;
+}
+#s46 {
+	grid-area: s46;
+}
+#s47 {
+	grid-area: s47;
+}
+#s48 {
+	grid-area: s48;
+}
+#s49 {
+	grid-area: s49;
+}
+
+#s50 {
+	grid-area: s50;
+}
+#s51 {
+	grid-area: s51;
+}
+#s52 {
+	grid-area: s52;
+}
+#s53 {
+	grid-area: s53;
+}
+#s54 {
+	grid-area: s54;
+}
+#s55 {
+	grid-area: s55;
+}
+#s56 {
+	grid-area: s56;
+}
+#s57 {
+	grid-area: s57;
+}
+#s58 {
+	grid-area: s58;
+}
+#s59 {
+	grid-area: s59;
+}
+
+#s60 {
+	grid-area: s60;
+}
+#s61 {
+	grid-area: s61;
+}
+#s62 {
+	grid-area: s62;
+}
+#s63 {
+	grid-area: s63;
+}
+#s64 {
+	grid-area: s64;
+}
+#s65 {
+	grid-area: s65;
+}
+#s66 {
+	grid-area: s66;
+}
+#s67 {
+	grid-area: s67;
+}
+#s68 {
+	grid-area: s68;
+}
+#s69 {
+	grid-area: s69;
+}
+
+#s70 {
+	grid-area: s70;
+}
+#s71 {
+	grid-area: s71;
+}
+#s72 {
+	grid-area: s72;
+}
+#s73 {
+	grid-area: s73;
+}
+#s74 {
+	grid-area: s74;
+}
+#s75 {
+	grid-area: s75;
+}
+#s76 {
+	grid-area: s76;
+}
+#s77 {
+	grid-area: s77;
+}
+#s78 {
+	grid-area: s78;
+}
+#s79 {
+	grid-area: s79;
+}
+
+#s80 {
+	grid-area: s80;
+}
+#s81 {
+	grid-area: s81;
+}
+#s82 {
+	grid-area: s82;
+}
+#s83 {
+	grid-area: s83;
+}
+#s84 {
+	grid-area: s84;
+}
+#s85 {
+	grid-area: s85;
+}
+#s86 {
+	grid-area: s86;
+}
+#s87 {
+	grid-area: s87;
+}
+#s88 {
+	grid-area: s88;
+}
+#s89 {
+	grid-area: s89;
+}
+
+#s90 {
+	grid-area: s90;
+}
+#s91 {
+	grid-area: s91;
+}
+#s92 {
+	grid-area: s92;
+}
+#s93 {
+	grid-area: s93;
+}
+#s94 {
+	grid-area: s94;
+}
+#s95 {
+	grid-area: s95;
+}
+#s96 {
+	grid-area: s96;
+}
+#s97 {
+	grid-area: s97;
+}
+#s98 {
+	grid-area: s98;
+}
+#s99 {
+	grid-area: s99;
+}
